--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <div open id="container">
+        <div class="new-book">
+          <dialog id="add-book">
+            <form >
+              <p>
+                
+              </p>
+            </form>
+          </dialog>
+        </div>
 
+        <div class="showcase">
+
+        </div>
+    </div>
 </body>
 
 </html>
